# opencode-overlord

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: orchestrate.yml
.opencode/: README.md  config.json
.serena/: project.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-deps-install.txt  task-10-cli-tests.txt  task-11-cleanup.txt  task-11-full-suite-final.txt  task-11-workflow-valid.txt  task-2-exceptions.txt  task-2-existing-tests.txt  task-2-models-validate.txt  task-3-config-env.txt  task-3-config-validation.txt  task-4-jules-401.txt  task-4-jules-dispatch.txt  task-4-jules-full.txt  task-5-copilot-dispatch.txt  task-5-copilot-status.txt  task-6-opencode-stub.txt  task-7-dag-cycle.txt  task-7-dag-full.txt  task-7-dag-linear.txt  task-7-dag-parse.txt  task-8-merge-enqueue.txt  task-8-merge-full.txt  task-8-merge-no-nodeid.txt  task-9-dispatch-routing.txt  task-9-full-suite.txt  task-9-merge-order.txt
.sisyphus/evidence/final-qa/: cli-help.txt  imports.txt  pytest-full.txt  ruff-format.txt  summary.txt
.sisyphus/notepads/opencode-overlord-implementation/: decisions.md  issues.md  learnings.md  (+1 more)
.sisyphus/plans/: opencode-overlord-implementation.md
docs/research/: initial-research.md
src/overlord/: __init__.py  cli.py  config.py  copilot.py  dag.py  exceptions.py  jules.py  merge_queue.py  models.py  opencode.py  orchestrator.py  protocols.py
tests/: conftest.py  test_cli.py  test_config.py  test_copilot_client.py  test_dag.py  test_jules_client.py  test_merge_queue.py  test_opencode_client.py  test_orchestrator.py
(+24 files in other folders)
