[project]
name = "opencode-overlord"
version = "0.1.0"
description = "Orchestration and coordination logic for GitHub Jules, Copilot, and OpenCode agents across repositories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygithub>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "respx>=0.21.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/overlord"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
